# lame_v4

./: .gitattributes  .gitignore  CLAUDE.md  CMakeLists.txt  FINDINGS.md  Makefile.MSVC  build.cmd  configMS.h
.github/workflows/: ci.yml
docs/: analysis-front-audit.md  podcast-optimizer-design.md  writing-guide.md
frontend/: parse.c
fuzz/: fuzz_encode.c  fuzz_hip_decode.c
include/: lame.def  lame.h  libmp3lame.sym
libmp3lame/: l3side.h  lame.c  lame_global_flags.h  quantize.c  quantize.h  set_get.c  util.h  vbrquantize.c
tests/: README.md  abtest.ps1  autotune10_qmax128.csv  autotune11_vbr128.csv  autotune12_vbr128_stab.csv  autotune2_q0_cbr128.csv  autotune4_q0_cbr128.csv  autotune5_q0_cbr128.csv  autotune7_q0_cbr128.csv  autotune8_q0_cbr320.csv  autotune9_q0_abr192.csv  autotune_q0_cbr128.csv  baseline.json  eqsize-abtest.ps1  lint-docs.sh  make_abx.ps1  make_pref.ps1  regress.ps1  smoke.sh  validate_qmax.ps1  validate_vbr.ps1
tests/abx/: ABX Test Results - 07-02-2026 1405PM.txt  ABX Test Results - 07-03-2026 qmax v1 vs v2.txt  ABX Test Results D vs E - 07-03-2026 1438PM.txt  ABX Test Results F vs G - 07-05-2026 1708PM.txt  ABX Test Results H vs I - 07-06-2026 0236AM.txt  ABX Test Results J vs K - 07-06-2026 2117PM.txt  ABX Test Results J2 vs K - 07-06-2026 2158PM.txt  ABX Test Results L vs M - 07-06-2026 2152PM.txt  ABX Test Results P1ctl designed control - 07-09-2026 1830PM.txt  ABX Test Results P1ctl stock-vs-stock rate control - 07-09-2026 1608PM.txt  ABX Test Results P2_A vs P2_B - 07-09-2026 1508PM.txt  ABX Test Results P2_A vs P2_B - 07-09-2026 1859PM.txt  ABX Test Results P4_A vs P4_B - 07-09-2026 1459PM.txt  ABX Test Results qmaxv1 vs qmaxv2 - 07-03-2026 1241PM.txt  README.md
tests/corpusgen/: Program.cs  corpusgen.csproj
tests/nmr/: Program.cs  nmr.csproj
tests/transient/: Program.cs  transient.csproj
tools/autotune/: Program.cs  autotune.csproj
tools/podcast/: Program.cs  podcast.csproj
